Add tmux auto-start.sh
1. bash auto-start.sh to auto load workspace
2. update vnc config 0:0

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,3 +3,9 @@ set-option -g allow-rename off
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+
+# j k h l 
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
